tests/baselines/reference/emitArrowFunctionWhenUsingArguments02_ES6.errors.txt
tests/cases/conformance/es6/arrowFunction/emitArrowFunctionWhenUsingArguments02_ES6.ts(2,15): error TS2496: The 'arguments' object cannot be referenced in an arrow function. Consider using a standard function expression.


==== tests/cases/conformance/es6/arrowFunction/emitArrowFunctionWhenUsingArguments02_ES6.ts (1 errors) ====
    
    var a = () => arguments;
                  ~~~~~~~~~
!!! error TS2496: The 'arguments' object cannot be referenced in an arrow function. Consider using a standard function expression.